# orcamento_pessoal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agents.md  main.cpp
.claude/: CLAUDE.md
.claude/projects/-home-petrus-IDrive-Documentos-projetos-dev-orcamento-pessoal/memory/: MEMORY.md
.github/workflows/: build.yml
docs/: architecture.md  database.md
resources/: resources.qrc
src/: main.cpp
src/core/: CryptoHelper.cpp  CryptoHelper.h  DatabaseManager.cpp  DatabaseManager.h
src/models/: Categoria.cpp  Categoria.h  Entrada.cpp  Entrada.h  GastoFixo.cpp  GastoFixo.h  GastoVariavel.cpp  GastoVariavel.h
src/ui/: ConfigWidget.cpp  ConfigWidget.h  DashboardWidget.cpp  DashboardWidget.h  EntradasWidget.cpp  EntradasWidget.h  GastosFixosWidget.cpp  GastosFixosWidget.h  GastosVariaveisWidget.cpp  GastosVariaveisWidget.h  MainWindow.cpp  MainWindow.h  PasswordDialog.cpp  PasswordDialog.h  Theme.cpp  Theme.h
src/utils/: CurrencyUtils.cpp  CurrencyUtils.h
